[project]
name = "omics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gseapy>=1.3.0",
    "huggingface-hub>=1.20.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "pandas>=0.25.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
